2009-02-05  Les Harris  <lharris@gnome.org>
	* src/mud-connections.c: Fixed reimplemented
	certain list frees to the recommend form.
	Fixed a corner case where renaming a mud 
	would not delete the previous named mud from
	gconf.

2008-12-13  Przemysław Grzegorczyk  <pgrzegorczyk@gmail.com>

	* src/gconf-helper.c:
	* src/gnome-mud.c:
	* src/modules.c:
	* src/mud-connection-view.c:
	* src/mud-connection-view.h:
	* src/mud-preferences-window.c:
	* src/mud-profile.c:
	* src/mud-profile.h:
	* src/mud-regex.c:
	* src/mud-tray.c:
	* src/mud-window.c: Cleaned up gtk and glib includes
	to use only toplevel headers. Bug #564363.

2008-12-09  Les Harris  <lharris@gnome.org>

	* gnome-mud-desktop.in: Applied 
	patch from Emilio Pozeulo Monfort
	bringing the desktop file up to
	current standards (Bug# 563846)

2008-11-13  Les Harris  <lharris@gnome.org>

	* src/mud-connections.c: Removed
	logging g_messages.

	* ui/muds.ui, ui/prefs.ui: Changed
	the glade generated GtkSpinButton
	adjustment page size to 0 as it
	should be.

2008-11-01  Les Harris  <me@lesharris.com>

	* src/mud-connections.c: Remove some
	code that was causing double frees.

2008-08-08  Les Harris  <me@lesharris.com>

	* src/mud-window-profile.c: Added
	a destroy callback, removed old
	close signal.

	* src/mud-window.c: Properly unref
	the logo pixbuf to stop memory leak.

	* ui/prefs.glade: Refactored profile
	manager dialog to be cleaner.

2008-08-04  Les Harris  <me@lesharris.com>

	* ui/prefs.glade: Committed the proper
	glade file with the ui cleanup in it.

2008-08-01  Les Harris  <me@lesharris.com>

	* src/Makefile.am: Removed mud-window-mudedit.[ch],
	mud-window-mudlist.[ch], mud-window-mconnect.[ch].
	Added mud-connections.[ch]

	* src/mud-connections.[ch]: New files which
	implement an iconview-based appraoch to 
	handling mud connections.

	* src/mud-window-mudedit.[ch],
	  src/mud-window-mconnect.[ch],
	  src/mud-window-mudlist.[ch]: Removed these
	  files as their functionality is replaced