@@ -92,24 +92,26 @@ dnl Check whether to include mapper support (defaults to no)
 #	AC_DEFINE(ENABLE_MAPPER, 1, [Define if mapper support should be enabled])
 #fi
 
+dnl Temporarily disabling MCCP check.
+
 dnl Check whether to include MCCP code or not
-AC_ARG_ENABLE(mccp,
-	AC_HELP_STRING([--enable-mccp],
-		       [Enable MCCP (MUD Client Compression Protocol)]),,
-		enable_mccp=auto)
-if test "x$enable_mccp" != "xno"; then
-	AC_CHECK_HEADER(zlib.h, have_zlib=yes, have_zlib=no)
-	if test "x$have_zlib" = "xno" -a "x$enable_mccp" = "xyes"; then
-	  AC_MSG_ERROR([MCCP support explicitly requested but zlib was not found])
-	fi
-	if test "x$have_zlib" = "xyes"; then
-	  AC_DEFINE(ENABLE_MCCP, 1, [Define if MCCP should be enabled])
-	  enable_mccp=yes
-	  Z_LIBS="-lz"
-	fi
-fi
-AM_CONDITIONAL(USE_MCCP, test "x$enable_mccp" = xyes)
-AC_SUBST(Z_LIBS)
+dnl AC_ARG_ENABLE(mccp,
+dnl 	AC_HELP_STRING([--enable-mccp],
+dnl 		       [Enable MCCP (MUD Client Compression Protocol)]),,
+dnl 		enable_mccp=auto)
+dnl if test "x$enable_mccp" != "xno"; then
+dnl 	AC_CHECK_HEADER(zlib.h, have_zlib=yes, have_zlib=no)
+dnl 	if test "x$have_zlib" = "xno" -a "x$enable_mccp" = "xyes"; then
+dnl 	  AC_MSG_ERROR([MCCP support explicitly requested but zlib was not found])
+dnl 	fi
+dnl 	if test "x$have_zlib" = "xyes"; then
+dnl 	  AC_DEFINE(ENABLE_MCCP, 1, [Define if MCCP should be enabled])
+dnl 	  enable_mccp=yes
+dnl 	  Z_LIBS="-lz"
+dnl 	fi
+dnl fi
+dnl AM_CONDITIONAL(USE_MCCP, test "x$enable_mccp" = xyes)
+dnl AC_SUBST(Z_LIBS)
 
 dnl Check whether to include GStreamer code or not
 AC_ARG_ENABLE(gstreamer,
@@ -158,18 +160,18 @@ AC_OUTPUT
 
 AC_MSG_NOTICE([GNOME-Mud has been configured with the following options:])
 
-if test "x$enable_mccp" = xyes; then
-	AC_MSG_NOTICE([    * MCCP support is enabled])
-else
-	AC_MSG_NOTICE([    * MCCP support is disabled])
-fi
+dnl if test "x$enable_mccp" = xyes; then
+dnl 	AC_MSG_NOTICE([    * MCCP support is enabled])
+dnl else
+dnl 	AC_MSG_NOTICE([    * MCCP support is disabled])
+dnl fi
 
 #if test "x$enable_mapper" = xyes; then
 #	AC_MSG_NOTICE([    * Mapper support is enabled])
 #else
 #	AC_MSG_NOTICE([    * Mapper support is disabled])
 #fi
-#
+
 if test "x$enable_gstreamer" = xyes; then
 	AC_MSG_NOTICE([    * GStreamer support is enabled])
 else
