@@ -35,10 +35,6 @@
 #include "mud-telnet-handlers.h"
 #include "mud-telnet-zmp.h"
 
-#ifdef ENABLE_MCCP
-#include "mud-telnet-mccp.h"
-#endif
-
 struct _MudTelnetPrivate
 {
 };
@@ -134,16 +130,6 @@ mud_telnet_finalize (GObject *object)
         g_string_free(telnet->processed, TRUE);
     g_free(telnet->priv);
 
-#ifdef ENABLE_MCCP
-    if (telnet->compress_out != NULL)
-    {
-	inflateEnd(telnet->compress_out);
-
-	g_free(telnet->compress_out);
-	g_free(telnet->compress_out_buf);
-    }
-#endif
-
     parent_class = g_type_class_peek_parent(G_OBJECT_GET_CLASS(object));
     parent_class->finalize(object);
 }
@@ -188,10 +174,6 @@ mud_telnet_new(MudConnectionView *parent, GConn *connection, gchar *mud_name)
     telnet->base_url = NULL;
     telnet->msp_parser.enabled = FALSE;
 
-#endif
-
-#ifdef ENABLE_MCCP
-    telnet->mccp_new = TRUE;
 #endif
 
     return telnet;
@@ -270,16 +252,6 @@ mud_telnet_register_handlers(MudTelnet *telnet)
     telnet->handlers[6].handle_sub_neg = MudHandler_MSP_HandleSubNeg;
 #endif
 
-#ifdef ENABLE_MCCP
-    /* MCCP */
-    telnet->handlers[7].type = HANDLER_MCCP2;
-    telnet->handlers[7].option_number = (guchar)TELOPT_MCCP2;
-    telnet->handlers[7].enabled = FALSE;
-    telnet->handlers[7].enable = MudHandler_MCCP_Enable;
-    telnet->handlers[7].disable = MudHandler_MCCP_Disable;
-    telnet->handlers[7].handle_sub_neg = MudHandler_MCCP_HandleSubNeg;
-#endif
-
 }
 
 gint
@@ -348,28 +320,7 @@ mud_telnet_process(MudTelnet *telnet, guchar * buf, guint32 c, gint *len, GStrin
 
     telnet->buffer = g_string_new(NULL);
 
-#ifdef ENABLE_MCCP
-    if(telnet->mccp)
-    {
-        GString *ret = NULL;
-        gchar *str;
-
-        // decompress the buffer.
-        //ret = mud_mccp_decompress(telnet, buf, c);
-
-        if(ret == NULL)
-            return;
-        else
-        {
-            str = g_strdup(ret->str);
-            g_string_append(telnet->buffer, str);
-            g_string_free(ret, TRUE);
-            g_free(str);
-        }
-    }
-    else
-#endif
-	g_string_append_len(telnet->buffer, (gchar *)buf, c);
+    g_string_append_len(telnet->buffer, (gchar *)buf, c);
 
     count = telnet->buffer->len;
 
@@ -378,75 +329,6 @@ mud_telnet_process(MudTelnet *telnet, guchar * buf, guint32 c, gint *len, GStrin
 	switch (telnet->tel_state)
 	{
 	case TEL_STATE_TEXT:
-#ifdef ENABLE_MCCP
-	    /* The following is only done when compressing is first
-	       enabled in order to decompress any part of the buffer
-	       that remains after the subnegotation takes place */
-	    if(telnet->mccp && telnet->mccp_new)
-	    {
-		GString *ret = NULL;
-		telnet->mccp_new = FALSE;
-
-		// decompress the rest of the buffer.
-		//ret = mud_mccp_decompress(telnet, &buf[i], c - i);
-
-		if(ret == NULL)
-		{
-		    if(*out_buf != NULL) g_string_free(*out_buf, TRUE);
-		    *out_buf = g_string_new_len(telnet->processed->str, telnet->pos);
-		    *len = telnet->pos;
-
-		    telnet->pos= 0;
-
-		    if(telnet->processed)
-		    {
-			g_string_free(telnet->processed, TRUE);
-			telnet->processed = g_string_new(NULL);
-		    }
-
-		    if(telnet->buffer)
-		    {
-			g_string_free(telnet->buffer, TRUE);
-			telnet->buffer = NULL;
-		    }
-
-		    return;
-		}
-
-		if(telnet->buffer)
-		{
-		    g_string_free(telnet->buffer, TRUE);
-		    telnet->buffer = NULL;
-		}
-
-		telnet->buffer = g_string_new(ret->str);
-
-		if(telnet->buffer->len == 0)
-		{
-		    if(*out_buf != NULL) g_string_free(*out_buf, TRUE);
-		    *out_buf = g_string_new_len(telnet->processed->str, telnet->pos);
-		    *len = telnet->pos;
-
-		    telnet->pos= 0;
-
-		    if(telnet->processed)
-		    {
-			g_string_free(telnet->processed, TRUE);
-			telnet->processed = g_string_new(NULL);
-		    }
-
-		    if(telnet->buffer)
-		    {
-			g_string_free(telnet->buffer, TRUE);
-			telnet->buffer = NULL;
-		    }
-		    return;
-		}
-
-		i = 0;
-		count = telnet->buffer->len;
-	    }
-#endif
 	    if ((guchar)telnet->buffer->str[i] == (guchar)TEL_IAC)
 		telnet->tel_state = TEL_STATE_IAC;
 	    else
